--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <script type="text/javascript" src="scripts/utils.js"></script>
     <script type="text/javascript" src="scripts/lexer.js"></script>	
-    <script type="text/javascript" src="scripts/parser.js"></script>	
+    <!--     <script type="text/javascript" src="scripts/parser.js"></script>	-->
 </body> 
 </html> 
 
