--- a/index.html
+++ b/index.html
@@ -3,27 +3,37 @@
 
 <div class='nowiki' val=""><font color="purple">
 
-<body bgcolor="black">
+<body bgcolor="white">
 
 <head> 
     <title>compiler</title> 
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" /> 
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head> 
 <body> 
     <h1>compiler proyect</h1> 
-    <div> 
-        <textarea id="Main_Code" cols="45" rows="20"></textarea> 
-        <br> 
-        <input type="button" id="btnCompile" value="RUN" onclick="init();"/> 
-        <br> 
-                COMPILER OUTPUT HERE:
-        <br>  
-        <textarea id="Output" cols="40" rows="20"></textarea> 
-    </div> 
-    </div> 
+ <input type="button" id="btnCompile" value="RUN" onclick="init();"/> 
+    <main>
+      <div class="editor">
+        <div class="line">
+            <p>1</p>
+        </div>
+       <div class="text-cont">
+          <textarea name="" id="Main_Code" cols="45" rows="20" onkeyup="update()"></textarea>
+         <br>
+        </div>
+    </div>
+
+        <div>
+            <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> 
+            COMPILER OUTPUT HERE:
+            <br>  
+            <textarea id="Output" cols="45" rows="8"></textarea>
+        </div>
+    </main>
 
     <script type="text/javascript" src="scripts/utils.js"></script>
     <script type="text/javascript" src="scripts/lexer.js"></script>	
-    <!--     <script type="text/javascript" src="scripts/parser.js"></script>	-->
 </body> 
 </html> 
+
