--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     </div>
 
         <div>
-            <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>  <br> <br> 
- <br> <br>  <br> <br>             COMPILER OUTPUT HERE:
+            <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
+            COMPILER OUTPUT HERE:
             <br>  
             <textarea id="Output" cols="45" rows="8"></textarea>
         </div>
