--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
          <br>
         </div>
     </div>
-
         <div>
             <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> 
+            COMPILER OUTPUT HERE:
             <br>  
             <textarea id="Output" cols="45" rows="8"></textarea>
         </div>
