--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
-<!DOCTYPE HTML> 
-<html> 
+<!DOCTYPE HTML>
+<html>
 
 <div class='nowiki' val=""><font color="purple">
 
 <body bgcolor="white">
 
-<head> 
-    <title>compiler</title> 
-    <meta http-equiv="Content-Type" content="text/html;charset=utf-8" /> 
+<head>
+    <title>compiler</title>
+    <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <link rel="stylesheet" type="text/css" href="css/styles.css">
-</head> 
-<body> 
-    <h1>compiler proyect</h1> 
- <input type="button" id="btnCompile" value="RUN" onclick="init();"/> 
+</head>
+<body>
+    <h1>compiler proyect</h1>
+ <input type="button" id="btnCompile" value="RUN" onclick="init();"/>
     <main>
       <div class="editor">
         <div class="line">
@@ -25,14 +25,14 @@
     </div>
         <div>
             <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>  <br>
-            COMPILER OUTPUT HERE:
-            <br>  
+            COMPILER OUTPUT HERE OK
+            <br>
             <textarea id="Output" cols="45" rows="8"></textarea>
         </div>
     </main>
 
     <script type="text/javascript" src="scripts/utils.js"></script>
-    <script type="text/javascript" src="scripts/lexer.js"></script>	
-</body> 
-</html> 
+    <script type="text/javascript" src="scripts/lexer.js"></script>
+</body>
+</html>
 
