único archivo en lexer y parser

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
-<body>
     <h1>compiler proyect</h1>
  <input type="button" id="btnCompile" value="RUN" onclick="init();"/>
     <main>
@@ -31,8 +30,9 @@
         </div>
     </main>
 
-    <script type="text/javascript" src="scripts/utils.js"></script>
-    <script type="text/javascript" src="scripts/lexer.js"></script>
+    <script src="scripts/utils.js"></script>
+    <script src="scripts/lexer.js"></script>
+    <script src="scripts/parser.js" ></script>
 </body>
 </html>
 
