--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <script src="scripts/utils.js"></script>
     <script src="scripts/lexer.js"></script>
-    <script src="scripts/parser.js" ></script>
+    <!-- <script src="scripts/parser.js" ></script> -->
 </body>
 </html>
 
