--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
 <div class='nowiki' val=""><font color="purple">
 
 <body bgcolor="white">
+  <style>
+canvas {
+    border:1px solid #d3d3d3;
+    background-color: #f1f1f1;
+}
+
+  </style>
+
 
 <head>
     <title>compiler</title>
@@ -35,28 +43,115 @@
 </div>
 
 <div class="container-main">
-  <div class="game">
-    <div class="grid"></div>
-    <div class="info">
-      <div class="start">Start</div>
-      <div class="infoBox"></div>
-      <p>Score: <span class="score">0<span></p>
-      <p>Timer: <span class="timer">0</span></p>
-      <div class="table">
-        <p>TopScore:</p>
-        <p class="highScore"></p>
-      </div>
-      <p class="label">Controls</p>
-      <div class="controls">
-        <div class="up">↑</div>
-        <div class="sideways">
-          <div class="left">←</div>
-          <div class="right">→</div>
-        </div>
-          <div class="down">↓</div>
-      </div>
-    </div>
-  </div>
+  <h1>hello wordl</h1>
+
+
+  <body onload="startGame()">
+<script>
+
+var myGamePiece;
+
+function startGame() {
+    myGamePiece = new component(30, 30, "red", 10, 120);
+    myGameArea.start();
+}
+
+var myGameArea = {
+    canvas : document.createElement("canvas"),
+    start : function() {
+        this.canvas.width = 480;
+        this.canvas.height = 270;
+        this.context = this.canvas.getContext("2d");
+        document.body.insertBefore(this.canvas, document.body.childNodes[0]);
+        this.interval = setInterval(updateGameArea, 20);
+    },
+    clear : function() {
+        this.context.clearRect(0, 0, this.canvas.width, this.canvas.height);
+    }
+}
+
+function component(width, height, color, x, y) {
+    this.width = width;
+    this.height = height;
+    this.speedX = 0;
+    this.speedY = 0;
+    this.x = x;
+    this.y = y;    
+    this.update = function() {
+        ctx = myGameArea.context;
+        ctx.fillStyle = color;
+        ctx.fillRect(this.x, this.y, this.width, this.height);
+    }
+    this.newPos = function() {
+        this.x += this.speedX;
+        this.y += this.speedY;        
+    }    
+}
+
+function updateGameArea() {
+    myGameArea.clear();
+    myGamePiece.newPos();    
+    myGamePiece.update();
+}
+
+function moveup() {
+    myGamePiece.speedY = -1; 
+}
+
+function movedown() {
+    myGamePiece.speedY = 1; 
+}
+
+function moveleft() {
+    myGamePiece.speedX = -1; 
+}
+
+function moveright() {
+    myGamePiece.speedX = 1; 
+}
+
+function clearmove() {
+    myGamePiece.speedX = 0; 
+    myGamePiece.speedY = 0; 
+}
+
+function getRandomArbitrary(min, max) {
+  return Math.random() * (max - min) + min;
+}
+var number = 0;
+function action(){
+    msg = document.getElementById('msg').value;
+    if(msg[number]==1){
+        console.log("this-> uno");
+        moveright();
+    }else if(msg[number]==2){
+        console.log("this-> dos");
+        moveleft();
+    }else if(msg[number]==3){
+        console.log("this-> tress");
+        movedown();
+    }
+    number+=1;
+    //document.getElementById('output').innerHTML = msg;
+}
+</script>
+<div style="text-align:center;width:480px;">
+  <button onmousedown="moveup()" onmouseup="clearmove()" ontouchstart="moveup()">UP</button><br><br>
+  <button onmousedown="moveleft()" onmouseup="clearmove()" ontouchstart="moveleft()">LEFT</button>
+  <button onmousedown="moveright()" onmouseup="clearmove()" ontouchstart="moveright()">RIGHT</button><br><br>
+  <button onmousedown="movedown()" onmouseup="clearmove()" ontouchstart="movedown()">DOWN</button>
+</div>
+<br>
+<tr>
+  <td>
+    <input type="text" value="" id="msg">
+  </td>
+  </tr>
+  <p id="output"></p>
+  <tr>
+  <td><button  onmousedown="action()" onmouseup="clearmove()"  ontouchstart="action()">DEC</button></td>
+  </tr>
+</body>
 
 
 
